--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     INITIATIVES
                 </h1>
                 <div class="init-wrap d-flex">
-                    <a href="./initiatives/index.html">
+                    <a href="./initiatives/index.html#collab">
                         <div class="init-card">
                             <h2>
                                 Learning Collaboratives
@@ -153,7 +153,7 @@
                             <div class="init-overlay"></div>
                         </div>
                     </a>
-                    <a href="./initiatives/index.html">
+                    <a href="./initiatives/index.html#surveys">
                         <div class="init-card">
                             <h2>
                                 Surveys
@@ -162,7 +162,7 @@
                             <div class="init-overlay"></div>
                         </div>
                     </a>
-                    <a href="./initiatives/index.html">
+                    <a href="./initiatives/index.html#reviews">
                         <div class="init-card">
                             <h2>
                                 Scoping Reviews
