--- a/initiatives/index.html
+++ b/initiatives/index.html
@@ -14,7 +14,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>About | TCHEP</title>
+    <title>Initiatives | TCHEP</title>
 
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     <link rel="icon" href="../favicon.ico" type="image/x-icon">
@@ -109,18 +109,18 @@
                             <img src="../assets/img/init-edu.jpg" alt="">
                         </div>
                         <div class="init-info">
-                            <h3 id="collab">
+                            <h2 id="collab">
                                 Learning Collaboratives
-                            </h3>
+                            </h2>
                             <p>
                                 The primary vehicles for the educational activities of the Texas Collaborative for HIV Education and Prevention (TCHEP) are two learning collaboratives. We will adapt the current CDC and US Preventative Services Task Force (USPSTF) HIV prevention recommendations to the Texas system and provide educational opportunities in evidence-based HIV prevention strategies and best practices to medical providers through a series of webinars. 
                             </p>
                             <ul class="">
                             <li>
-                                The Learning Collaborative for HIV Prevention Best Practices in Primary Care will bring together providers engaged in primary care at public, private, and academic health institutions in Texas, for collaborative learning about HIV prevention best practices and discuss incorporation of routine HIV screening and PrEP/PEP as standard practices in primary care settings.
+                                The <strong>Learning Collaborative for HIV Prevention Best Practices in Primary Care</strong> will bring together providers engaged in primary care at public, private, and academic health institutions in Texas, for collaborative learning about HIV prevention best practices and discuss incorporation of routine HIV screening and PrEP/PEP as standard practices in primary care settings.
                             </li>
                             <li>
-                                The Learning Collaborative for HIV Prevention Best Practices in Emergency Departments will engage health care systems, hospitals, and emergency care providers for collaborative learning about HIV prevention best practices and discuss incorporation of routine HIV screening as a standard practice in emergency departments.
+                                The <strong>Learning Collaborative for HIV Prevention Best Practices in Emergency Departments</strong> will engage health care systems, hospitals, and emergency care providers for collaborative learning about HIV prevention best practices and discuss incorporation of routine HIV screening as a standard practice in emergency departments.
                             </li>
                             </ul>
                         </div>
@@ -131,17 +131,17 @@
                             <img src="../assets/img/init-edu.jpg" alt="">
                         </div>
                         <div class="init-info">
-                            <h3>Surveys</h3>
+                            <h2 id="surveys">Surveys</h2>
 
                             <p>TCHEP will conduct an evaluation of HIV prevention education in medical schools and current HIV testing and prevention practices in healthcare settings in Texas.</p>
 
                             <ul class="">
                             <li>
-                                Structured interviews with representatives of medical schools in Texas will be conducted to characterize gaps in HIV prevention education in medical school curricula, determine effective educational tools, and characterize best practices in HIV prevention education in medical curricula.  
+                                <strong>Structured interviews</strong> with representatives of medical schools in Texas will be conducted to characterize gaps in HIV prevention education in medical school curricula, determine effective educational tools, and characterize best practices in HIV prevention education in medical curricula.  
                             </li>
 
                             <li>
-                                Survey will be conducted to characterize current standard of care for HIV testing, linkage to care, and prevention practices in primary and emergency care settings in Texas. The results of the survey will inform HIV screening and prevention process improvement.
+                                <strong>Survey</strong> will be conducted to characterize current standard of care for HIV testing, linkage to care, and prevention practices in primary and emergency care settings in Texas. The results of the survey will inform HIV screening and prevention process improvement.
                             </li>
                             </ul>
                         </div>
@@ -152,13 +152,13 @@
                             <img src="../assets/img/init-edu.jpg" alt="">
                         </div>
                         <div class="init-info">
-                            <h3>Scoping reviews</h3>
+                            <h2 id="reviews">Scoping reviews</h2>
                             <ul class="">
                             <li>
-                                A scoping review will be done to provide an overview of evidence on the inclusion of HIV prevention education in medical school curricula.
+                                A <strong>scoping review</strong> will be done to provide an overview of evidence on the inclusion of HIV prevention education in medical school curricula.
                             </li>
                             <li>
-                                An evaluation of reimbursement practices for routine HIV testing and the return on investment (ROI)/cost effectiveness will be conducted to systematically synthesize the financial argument for implementing routine screening and PrEP as standard of care
+                                An <strong>evaluation</strong> of reimbursement practices for routine HIV testing and the return on investment (ROI)/cost effectiveness will be conducted to systematically synthesize the financial argument for implementing routine screening and PrEP as standard of care
                             </li>
                             </ul>
                         </div>
