stock images added

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                             <h2>
                                 Surveys
                             </h2>
-                            <img src="./assets/img/init-practice.jpg" alt="">
+                            <img src="./assets/img/surveys.jpg" alt="">
                             <div class="init-overlay"></div>
                         </div>
                     </a>
@@ -167,7 +167,7 @@
                             <h2>
                                 Scoping Reviews
                             </h2>
-                            <img src="./assets/img/init-practice.jpg" alt="">
+                            <img src="./assets/img/reviews.jpg" alt="">
                             <div class="init-overlay"></div>
                         </div>
                     </a>
