--- a/contact/index.html
+++ b/contact/index.html
@@ -108,16 +108,15 @@
                     </p> 
                     
                     <div class="contact-name">
+                        Executive Sponsor: <br><strong>David Lakey, MD</strong>, UT System<br>
+                    </div>
+                    <div class="contact-name">
                         Principal Investigator: <br><strong>Yordi Tiruneh, PhD</strong>, University of Texas Health Science Center at Tyler<br>
                         Email: <a href="mailto:Yordanos.Tiruneh@uthct.edu">Yordanos.Tiruneh@uthct.edu</a> 
                     </div>
                     <div class="contact-name">
                         Program Lead: <br><strong>Nagla Elerian, M.S.</strong>, UT System<br>
                         Email: <a href="mailto:nelerian@utsystem.edu">nelerian@utsystem.edu</a> 
-                    </div>
-                    <div class="contact-name">
-                        Research Associate:<br><strong>Daryl Traylor, MS, MPH, CHES</strong>, University of Texas Health Science Center at Tyler<br>
-                        Email: <a href="mailto:dtraylor@utsystem.edu" >dtraylor@utsystem.edu</a> 
                     </div>
                     <div class="contact-name">
                         Media Relations: <br><strong>Daniel Oppenheimer, MFA</strong>, University of Texas Health Science Center at Tyler<br>
