--- a/mission-goals/index.html
+++ b/mission-goals/index.html
@@ -105,61 +105,53 @@
                 </h1>
                 <div class="about">
                     <p>
-                        The Texas Collaborative for HIV Education and Prevention (TCHEP) is dedicated to reducing new HIV infections and ultimately ending the HIV epidemic in Texas by advancing evidence-informed clinical HIV preventive practices and processes. The goal is to promote routine HIV testing and expand use of biomedical HIV prevention strategies such as preexposure prophylaxis (PrEP) and post exposure prophylaxis (PEP) through the adoption of evidence-based practices through stakeholder engagement, trainings, and advocacy. 
+                        The Texas Collaborative for HIV Education and Prevention (TCHEP) is dedicated to reducing new HIV infections and ultimately ending the HIV epidemic in Texas by advancing evidence-informed clinical HIV preventive practices and processes. 
+
                     </p> 
                     <p>
-                        The Texas Collaborative for HIV Education and Prevention (TCHEP) is funded by the Texas Department of State Health Services, and supported and coordinated by The University of Texas Health Science Center at Tyler. An advisory committee of local and state experts and advocates will assist in steering the work of the collaborative.
+                        The TCHEP is funded by the Texas Department of State Health Services, and supported and coordinated by the University of Texas Health Science Center at Tyler. An advisory committee of local and state experts and advocates assist in steering the work of the collaborative.
                     </p>
                     <h2>
                         MISSION
                     </h2>
                     <p>
-                        The mission of the TCHEP is to advance widespread adoption of routine HIV screening and other biomedical prevention interventions such as pre-exposure prophylaxis (PrEP) and post- exposure prophylaxis (PEP) as standards of care in healthcare settings in Texas through policy changes and education of current and future clinicians.
+                        The mission of TCHEP is to advance widespread adoption of routine HIV screening and other biomedical prevention interventions such as pre-exposure prophylaxis (PrEP) and non-occupational post- exposure prophylaxis (nPEP) as standards of care in healthcare settings in Texas through education, advocacy, and policy changes.
                     </p>
                     <h2>
                         GOALS
                     </h2>
                     <p>
-                        The goal of the TCHEP is to reduce the number of new HIV infections and ultimately end the HIV epidemic in Texas by advancing evidence-informed clinical HIV preventive practices and processes, based on:
+                        The goal of TCHEP is to promote the integration of HIV prevention efforts in primary and emergency care settings in Texas based on:
                     </p>
                     <ul>
                         <li>
-                            Centers for Disease Control and Prevention (CDC) HIV screening recommendations in healthcare settings and the United States Preventive Services Task Force (USPSTF)
+                            The Centers for Disease Control and Prevention (CDC) HIV screening recommendations in healthcare settings, and
                         </li>
                         <li>
-                            Grade A recommendations for routine HIV screening and other biomedical prevention practices, including PrEP and PEP.
+                            The United States Preventive Services Task Force (USPSTF) Grade A recommendations for routine HIV screening and other biomedical prevention practices, including PrEP and nPEP.
                         </li>
                     </ul>
                     <p>
-                        Specific Goals include:
+                        In particular, TCHEP aims at:
                     </p>
                     <ul class="highlighted">
                         <li>
-                            Increase the number of healthcare systems and medical providers that adopt routine HIV screening as a standard of care to increase the number of persons who have been screened for HIV.
+                            Increasing the number of healthcare systems and medical providers that are educated about the CDC and US Preventative Services Task Force HIV screening recommendations as standard preventive practices.
                         </li>
                         <li>
-                            Increase the number of current and future medical providers who are educated about and adopt CDC and US Preventative Services Task Force HIV screening recommendations as standard preventive practices.
+                            Increasing the number of current and future medical providers who adopt routine HIV screening as a standard of care in emergency and primary care settings in Texas.
                         </li>
                         <li>
-                            Increase the number of medical providers who are educated about HIV infection and transmission.
+                            Expanding educational opportunities for medical provider regarding PrEP/nPEP and other biomedical HIV prevention strategies.
                         </li>
                         <li>
-                            Reduce the number of undiagnosed HIV infections.
+                            Promoting uptake and sustained use of PrEP/nPEP to prevent new HIV infections.
                         </li>
                         <li>
-                            Promote early identification of HIV infection.
+                            Promoting early identification of HIV infections and reducing the number of new infections. 
                         </li>
                         <li>
-                            Increase the proportion of persons living with HIV (PLWH) who are participating in HIV-related medical care.
-                        </li>
-                        <li>
-                            Increase the number of PLWH who achieve viral suppression. 
-                        </li>
-                        <li>
-                            Expand and enhance medical provider/patient education efforts regarding PrEP/PEP and other HIV prevention interventions.
-                        </li>
-                        <li>
-                            Scale-up uptake and sustained use of PrEP/PEP to prevent new HIV infections.
+                            Eliciting buy-in, collaboration, and support across healthcare institutions and providers in Texas to create a synergistic HIV prevention network.
                         </li>
                     </ul>
                     <!-- <p>
