--- a/initiatives/index.html
+++ b/initiatives/index.html
@@ -106,7 +106,7 @@
                 <div class="initiatives">
                     <div class="init-wrap">
                         <div class="init-img">
-                            <img src="../assets/img/init-edu.jpg" alt="">
+                            <img src="../assets/img/edu.png" alt="">
                         </div>
                         <div class="init-info">
                             <h2 id="collab">
@@ -128,7 +128,7 @@
                 <hr>
                     <div class="init-wrap">
                         <div class="init-img">
-                            <img src="../assets/img/surveys.jpg" alt="">
+                            <img src="../assets/img/surveys.png" alt="">
                         </div>
                         <div class="init-info">
                             <h2 id="surveys">Surveys</h2>
@@ -149,7 +149,7 @@
                     <hr>
                     <div class="init-wrap">
                         <div class="init-img">
-                            <img src="../assets/img/reviews.jpg" alt="">
+                            <img src="../assets/img/reviews.png" alt="">
                         </div>
                         <div class="init-info">
                             <h2 id="reviews">Scoping reviews</h2>
