--- a/index.html
+++ b/index.html
@@ -99,6 +99,11 @@
         </header>
 
         <div class="content">
+            <div class="pre-banner">
+                <a target="_blank" href="https://www.hiv.gov/blog/mark-your-calendar-live-leadership-uscha-formerly-usca">
+                    <i class="far fa-calendar-alt"></i>Free Webinars Oct. 19-20: Live with the Leadership at the U.S. Conference on HIV/AIDS
+                </a>
+            </div>
             <div class="banner">
                 <div id="intro-row" class="home-row d-flex flex-column justify-content-center">
                     <div class=" d-flex justify-content-center">
