--- a/contact/index.html
+++ b/contact/index.html
@@ -38,7 +38,7 @@
     
 
     <!-- social share meta tags -->
-    <meta property="og:title" content="TCHEP">
+    <meta property="og:title" content="The Texas Collaborative for HIV Education and Prevention">
     <meta property="og:description" content="">
     <meta property="og:image" content="">
     <meta property="og:url" content="">
