--- a/mission-goals/index.html
+++ b/mission-goals/index.html
@@ -39,7 +39,7 @@
     
 
     <!-- social share meta tags -->
-    <meta property="og:title" content="Father's Playbook App">
+    <meta property="og:title" content="The Texas Collaborative for HIV Education and Prevention">
     <meta property="og:description" content="">
     <meta property="og:image" content="">
     <meta property="og:url" content="">
