--- a/webinars/index.html
+++ b/webinars/index.html
@@ -111,8 +111,8 @@
                 
                     <div class="actions">
                         <div class="pc-series series">
-                            <h2>Learning Series for <span>Primary Care Providers</span></h2>
-                            <a href="">
+                            <h2>Learning Series for <br><span>Primary Care Providers</span></h2>
+                            <a href="../assets/files/webinars/Final TCHEP Learning Series for PCP- 5.17.21.pdf">
                                 <div class="icon">
                                     <i class="far fa-list-alt"></i>
                                 </div>
@@ -130,8 +130,8 @@
                             </a>
                         </div>
                         <div class="ec-series series">
-                            <h2>Learning Series for <spn>Emergency Care Providers</spn></h2>
-                            <a href="">
+                            <h2>Learning Series for <br><span>Emergency Care Providers</span></h2>
+                            <a href="../assets/files/webinars/Final TCHEP Learning Series for Emergency Care Providers- 5.17.21.pdf">
                                 <div class="icon">
                                     <i class="far fa-list-alt"></i>
                                 </div>
