--- a/webinars/index.html
+++ b/webinars/index.html
@@ -111,13 +111,21 @@
                 
                     <div class="actions">
                         <div class="pc-series series">
-                            <h2>Learning Series for <br><span>Primary Care Providers</span></h2>
-                            <a href="../assets/files/webinars/Final TCHEP Learning Series for PCP- 5.17.21.pdf">
+                            <h2>Learning Series of <span>Healthcare Providers</span></h2>
+                            <a href="#">
+                                <div class="icon">
+                                    <i class="far fa-calendar-alt"></i>
+                                </div>
+                                <p>
+                                    Schedule of Webinars
+                                </p>
+                            </a>
+                            <a href="../assets/files/webinars/TCHEP Learning Series Agendas and Speakers.pdf">
                                 <div class="icon">
                                     <i class="far fa-list-alt"></i>
                                 </div>
                                 <p>
-                                    Download the agenda for the Primary Care series
+                                    Agendas and Speakers
                                 </p>
                             </a>
                             <a href="https://us02web.zoom.us/webinar/register/WN_Wi20a2ZDRaO091nOGz-vOg">
@@ -125,29 +133,11 @@
                                     <i class="far fa-calendar-check"></i>
                                 </div>
                                 <p>
-                                    Register for the Primary Care series
+                                    Register for the Primary Care Series
                                 </p>
                             </a>
                         </div>
-                        <div class="ec-series series">
-                            <h2>Learning Series for <br><span>Emergency Care Providers</span></h2>
-                            <a href="../assets/files/webinars/Final TCHEP Learning Series for Emergency Care Providers- 5.17.21.pdf">
-                                <div class="icon">
-                                    <i class="far fa-list-alt"></i>
-                                </div>
-                                <p>
-                                    Download the agenda for the Emergency Care series
-                                </p>
-                            </a>
-                            <a href="https://us02web.zoom.us/webinar/register/WN_c-W5Sju9QzaQuVDLmAtNag">
-                                <div class="icon">
-                                    <i class="far fa-calendar-check"></i>
-                                </div>
-                                <p>
-                                    Register for the Emergency Care series
-                                </p>
-                            </a>
-                        </div>
+
                     </div>
                 
                 </div>
