--- a/webinars/index.html
+++ b/webinars/index.html
@@ -33,7 +33,7 @@
 
     <!-- mys stylesheets -->
     <link rel="stylesheet" href="../assets/css/styles.css">
-    <link rel="stylesheet" href="../assets/css/webinars/webinars.css">
+    <link rel="stylesheet" href="../assets/css/webinars/webinars.css?v=1.2">
     <link rel="stylesheet" href="../assets/css/responsive.css">
     <link rel="stylesheet" href="../assets/css/webinars/webinars-re.css">
     
@@ -128,7 +128,7 @@
                                     Agendas and Speakers
                                 </p>
                             </a>
-                            <a href="https://us02web.zoom.us/webinar/register/WN_Wi20a2ZDRaO091nOGz-vOg">
+                            <a href="https://us02web.zoom.us/webinar/register/WN_Wi20a2ZDRaO091nOGz-vOg" target="_blank">
                                 <div class="icon">
                                     <i class="far fa-calendar-check"></i>
                                 </div>
