--- a/contact/index.html
+++ b/contact/index.html
@@ -87,6 +87,11 @@
                                 STATISTICAL OVERVIEW
                             </a>
                         </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link" href="../webinars/" aria-haspopup="true" aria-expanded="false">
+                                WEBINARS
+                            </a>
+                        </li>
                         <!-- <li class="nav-item dropdown">
                             <a class="nav-link" href="#" aria-haspopup="true"  aria-expanded="false">
                                 RESOURCES
