--- a/webinars/index.html
+++ b/webinars/index.html
@@ -33,7 +33,7 @@
 
     <!-- mys stylesheets -->
     <link rel="stylesheet" href="../assets/css/styles.css">
-    <link rel="stylesheet" href="../assets/css/webinars/webinars.css?v=1.2">
+    <link rel="stylesheet" href="../assets/css/webinars/webinars.css">
     <link rel="stylesheet" href="../assets/css/responsive.css">
     <link rel="stylesheet" href="../assets/css/webinars/webinars-re.css">
     
@@ -73,7 +73,7 @@
                             ABOUT
                             </a>
                             <div class="dropdown-menu animate slideIn" >
-                                <a class="dropdown-item" href="#">Mission and Goals</a>
+                                <a class="dropdown-item" href="../mission-goals/">Mission and Goals</a>
                                 <!-- <a class="dropdown-item" href="../staff">Staff and Advisory Committee</a> -->
                                 <a class="dropdown-item" href="../contact">Staff and Contact</a>
                             </div>
@@ -84,8 +84,13 @@
                             </a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link" href="../overview/index.html"aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link" href="../overview/"aria-haspopup="true" aria-expanded="false">
                                 STATISTICAL OVERVIEW
+                            </a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link" href="#"aria-haspopup="true" aria-expanded="false">
+                                WEBINARS
                             </a>
                         </li>
                         <!-- <li class="nav-item dropdown">
@@ -112,7 +117,8 @@
                     <div class="actions">
                         <div class="pc-series series">
                             <h2>Learning Series of <span>Healthcare Providers</span></h2>
-                            <a href="#">
+                            <div class="buttons">
+                            <a href="../assets/files/webinars/TCHEP_HIV Prevention Webinar Series flyer_combined.pdf">
                                 <div class="icon">
                                     <i class="far fa-calendar-alt"></i>
                                 </div>
@@ -128,7 +134,7 @@
                                     Agendas and Speakers
                                 </p>
                             </a>
-                            <a href="https://us02web.zoom.us/webinar/register/WN_Wi20a2ZDRaO091nOGz-vOg" target="_blank">
+                            <a class="register" href="https://us02web.zoom.us/webinar/register/WN_Wi20a2ZDRaO091nOGz-vOg" target="_blank">
                                 <div class="icon">
                                     <i class="far fa-calendar-check"></i>
                                 </div>
@@ -136,6 +142,15 @@
                                     Register for the Primary Care Series
                                 </p>
                             </a>
+                            <a href="../assets/files/webinars/Final-TCHEP Learning Series-Webinar 1- Full deck.pdf" target="_blank">
+                                <div class="icon">
+                                    <i class="far fa-file-powerpoint"></i>
+                                </div>
+                                <p>
+                                    Presentations
+                                </p>
+                            </a>
+                        </div>
                         </div>
 
                     </div>
