--- a/webinars/index.html
+++ b/webinars/index.html
@@ -118,7 +118,7 @@
                         <div class="pc-series series">
                             <h2>Learning Series of <span>Healthcare Providers</span></h2>
                             <div class="buttons">
-                            <a href="../assets/files/webinars/TCHEP_HIV Prevention Webinar Series flyer_combined.pdf">
+                            <a href="../assets/files/webinars/TCHEP_HIV Prevention Webinar Series flyer_combined.pdf" target="_blank">
                                 <div class="icon">
                                     <i class="far fa-calendar-alt"></i>
                                 </div>
@@ -126,7 +126,7 @@
                                     Schedule of Webinars
                                 </p>
                             </a>
-                            <a href="../assets/files/webinars/TCHEP Learning Series Agendas and Speakers.pdf">
+                            <a href="../assets/files/webinars/TCHEP Learning Series Agendas and Speakers.pdf" target="_blank">
                                 <div class="icon">
                                     <i class="far fa-list-alt"></i>
                                 </div>
@@ -134,12 +134,12 @@
                                     Agendas and Speakers
                                 </p>
                             </a>
-                            <a class="register" href="https://us02web.zoom.us/webinar/register/WN_Wi20a2ZDRaO091nOGz-vOg" target="_blank">
+                            <a class="register" href="#" target="">
                                 <div class="icon">
                                     <i class="far fa-calendar-check"></i>
                                 </div>
                                 <p>
-                                    Register for the Primary Care Series
+                                    Registration Coming Soon
                                 </p>
                             </a>
                             <a href="../assets/files/webinars/Final-TCHEP Learning Series-Webinar 1- Full deck.pdf" target="_blank">
