webinar page final

--- a/webinars/index.html
+++ b/webinars/index.html
@@ -118,42 +118,44 @@
                         <div class="pc-series series">
                             <h2>Learning Series of <span>Healthcare Providers</span></h2>
                             <div class="buttons">
-                            <a href="../assets/files/webinars/TCHEP_HIV Prevention Webinar Series flyer_combined.pdf" target="_blank">
-                                <div class="icon">
-                                    <i class="far fa-calendar-alt"></i>
-                                </div>
-                                <p>
-                                    Schedule of Webinars
-                                </p>
-                            </a>
-                            <a href="../assets/files/webinars/TCHEP Learning Series Agendas and Speakers.pdf" target="_blank">
-                                <div class="icon">
-                                    <i class="far fa-list-alt"></i>
-                                </div>
-                                <p>
-                                    Agendas and Speakers
-                                </p>
-                            </a>
-                            <a class="register" href="#" target="">
-                                <div class="icon">
-                                    <i class="far fa-calendar-check"></i>
-                                </div>
-                                <p>
-                                    Registration Coming Soon
-                                </p>
-                            </a>
-                            <a href="../assets/files/webinars/Final-TCHEP Learning Series-Webinar 1- Full deck.pdf" target="_blank">
-                                <div class="icon">
-                                    <i class="far fa-file-powerpoint"></i>
-                                </div>
-                                <p>
-                                    Presentations
-                                </p>
-                            </a>
-                        </div>
+                                <a href="../assets/files/webinars/TCHEP_HIV_schedule.pdf" target="_blank">
+                                    <div class="icon">
+                                        <i class="far fa-calendar-alt"></i>
+                                    </div>
+                                    <p>
+                                        Schedule of Webinars
+                                    </p>
+                                </a>
+                                <a href="../assets/files/webinars/TCHEP Learning Series Agendas and Speakers.pdf" target="_blank">
+                                    <div class="icon">
+                                        <i class="far fa-list-alt"></i>
+                                    </div>
+                                    <p>
+                                        Agendas and Speakers
+                                    </p>
+                                </a>
+                                <a class="register" href="https://utsystempophealth.sjc1.qualtrics.com/jfe/form/SV_3UbrXxveAQ8G9G6" target="_blank">
+                                    <div class="icon">
+                                        <i class="far fa-calendar-check"></i>
+                                    </div>
+                                    <p>
+                                        Register Here
+                                    </p>
+                                </a>
+                                <a href="../assets/files/webinars/Final-TCHEP Learning Series-Webinar 1- Full deck.pdf" target="_blank">
+                                    <div class="icon">
+                                        <i class="far fa-file-powerpoint"></i>
+                                    </div>
+                                    <p>
+                                        Presentations
+                                    </p>
+                                </a>
+                            </div>
                         </div>
 
                     </div>
+
+
                 
                 </div>
             </div>
