--- a/webinars/index.html
+++ b/webinars/index.html
@@ -142,17 +142,34 @@
                                         Register Here
                                     </p>
                                 </a>
-                                <a href="../assets/files/webinars/Final-TCHEP Learning Series-Webinar 1- Full deck.pdf" target="_blank">
+                                <a href="../assets/files/webinars/June8-presentation.pdf" target="_blank">
                                     <div class="icon">
                                         <i class="far fa-file-powerpoint"></i>
                                     </div>
                                     <p>
-                                        Presentations
+                                        June 8 Presentation
                                     </p>
                                 </a>
                             </div>
                         </div>
 
+                    </div>
+                    <hr>
+                    <div class="videos">
+
+                        <div class="webinar-vid">
+                            <h2>Video of May 27 Webinar: </h2> 
+                            <div class="vid-wrap">
+                                <iframe src="https://player.vimeo.com/video/560004342"  frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="webinar-vid">
+                            <h2>Video of June 8 Webinar: </h2> 
+                            <div class="vid-wrap">
+                                <iframe src="https://player.vimeo.com/video/560594807"  frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+                            </div>
+                        </div>
                     </div>
 
 
