--- a/webinars/index.html
+++ b/webinars/index.html
@@ -33,7 +33,7 @@
 
     <!-- mys stylesheets -->
     <link rel="stylesheet" href="../assets/css/styles.css">
-    <link rel="stylesheet" href="../assets/css/webinars/webinars.css">
+    <link rel="stylesheet" href="../assets/css/webinars/webinars.css?v=2">
     <link rel="stylesheet" href="../assets/css/responsive.css">
     <link rel="stylesheet" href="../assets/css/webinars/webinars-re.css">
     
@@ -118,7 +118,7 @@
                         <div class="pc-series series">
                             <h2>Learning Series of <span>Healthcare Providers</span></h2>
                             <div class="buttons">
-                                <a href="../assets/files/webinars/schedule.pdf" target="_blank">
+                                <a href="../assets/files/webinars/tchep_schedule-6-21.pdf" target="_blank">
                                     <div class="icon">
                                         <i class="far fa-calendar-alt"></i>
                                     </div>
