--- a/webinars/index.html
+++ b/webinars/index.html
@@ -33,7 +33,7 @@
 
     <!-- mys stylesheets -->
     <link rel="stylesheet" href="../assets/css/styles.css">
-    <link rel="stylesheet" href="../assets/css/webinars/webinars.css?v=2">
+    <link rel="stylesheet" href="../assets/css/webinars/webinars.css?v-2">
     <link rel="stylesheet" href="../assets/css/responsive.css">
     <link rel="stylesheet" href="../assets/css/webinars/webinars-re.css">
     
@@ -148,6 +148,14 @@
                                     </div>
                                     <p>
                                         June 8 Presentation
+                                    </p>
+                                </a>
+                                <a href="../assets/files/webinars/TCHEP-webinar-June22.pdf" target="_blank">
+                                    <div class="icon">
+                                        <i class="far fa-file-powerpoint"></i>
+                                    </div>
+                                    <p>
+                                        June 22: Critical Partnerships to Ensure Successful Routine HIV Screening Programs in Healthcare Settings and Linkage to HIV Medical Care
                                     </p>
                                 </a>
                             </div>
